--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <br>
     <div class="container-fluid">
         <div class="text-center">
-            <h1 class="text-warning display-3 p-5"> <strong>Group-6 Capstone Projects</strong></h1>
+            <h1 class="text-warning display-4 p-5"> <strong>Group-6 Capstone Projects</strong></h1>
             <p class="text-white lead">Are you a group-6 member? <br> proceed to create your account with us <strong><a href="#begin" class="text-warning">here</a></strong></p>
         </div>
         <div class="row justify-content-center p-5">
-            <div class="col-5 bg-white rounded p-3">
+            <div class="col-md-6 bg-white rounded p-3">
                 <h2 class="text-primary" id="begin">Create Account</h2>
                 <form id ="form" class="mt-4 lead">
                     <div class="form-group">
