--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>Second Capstone Project</title>
 </head>
-<body class="bg-secondary">
+<body class="bg-image" style="background-image: url('../images/bg-imgs.jpg')">
     <nav class="navbar">
         <div class="brand-title">Group-6</div>
         <a href="#" class="toggle-button">
@@ -31,13 +31,14 @@
     <br>
     <div class="container-fluid">
         <div class="text-center">
-            <h1 class="text-warning display-4 p-5"> <strong>Group-6 Capstone Projects</strong></h1>
-            <p class="text-white lead">Are you a group-6 member? <br> proceed to create your account with us <strong><a href="#begin" class="text-warning">here</a></strong></p>
+            <h1 class="text-warning pt-md-5"> <br>Html, CSS and Javascript Group-6</h1>
+            <hr class="border border-warning" style="width:30%; text-align:center;">
+            <p class="text-white h4">Are you a group-6 member? <br> Proceed to create your account with us <strong><a href="#begin" class="text-warning">here</a></strong></p>
         </div>
-        <div class="row justify-content-center p-5">
-            <div class="col-md-6 bg-white rounded p-3">
-                <h2 class="text-primary" id="begin">Create Account</h2>
-                <form id ="form" class="mt-4 lead">
+        <div class="row justify-content-center pt-md-5">
+            <div class="col-md-6 bg-info rounded p-5">
+                <h2 class="text-white" id="begin">Create Account</h2>
+                <form id ="form" class="mt-4 lead text-white">
                     <div class="form-group">
                         <label for="username">Username:</label>
                         <input type="text" placeholder="mubarak13" id="username" class="form-control">
@@ -82,7 +83,7 @@
                     </div>
                     <br>
                     <div class="text-center">
-                        <button type="Sign Up" class="btn btn-primary form-control">Submit</button>
+                        <button type="Sign Up" class="btn btn-info border border-colour-warning form-control">Submit</button>
                     </div>
                 </form>
             </div>         
