--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>Second Capstone Project</title>
 </head>
-<body class="bg-image" style="background-image: url('../images/bg-imgs.jpg')">
+<body class="bg-image" style="background-image: url('images/bg-imgs.jpg')">
     <nav class="navbar">
         <div class="brand-title">Group-6</div>
         <a href="#" class="toggle-button">
